--- a/zarp/css/style.css
+++ b/zarp/css/style.css
@@ -1,95 +1,106 @@
 /* Global */
-
-*{
-	box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    background-color: #F5ECCE;
-}
-html {
-    font-family: "helvetica neue", sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-color: #F5ECCE;
 }
 
-header{
-	background-color: #F5DA81;
+html {
+  font-family: "helvetica neue", sans-serif;
 }
-h1, h2, h3{
-	text-align: center;
+
+header {
+  background-color: #F5DA81;
 }
-	.menu {
-    margin: 0 30px 0 0;
+
+h1, h2, h3 {
+  text-align: center;
 }
-	.menu a {
-    text-decoration: none;
-    color: white;
-    line-height: 50px;
-	font-size: 20px;
+
+.menu {
+  margin: 0 30px 0 0;
 }
-.læs-mere-button{
-		font-size: 20px;
-		text-align: center;
-		border: none;
-		padding: 8px;
-		width: 100%;
-		background-color: #ffdf00;
-	}
-.border-box {
-		border-style: solid;
-		padding: 10px;
-		margin-bottom: 2%;
-		}
-    footer {
-        display: none;
-    }
+
+.menu a {
+  text-decoration: none;
+  color: white;
+  line-height: 40px;
+  font-size: 20px;
+}
+
+footer {
+  display: none;
+}
 
 /* Mobile First op til 767px */
-@media (max-width: 767px){
-	.burgermenu{
-		display: flex;
-	}
-
-
-	#toggle {
-    	display: none;
-	}
-
-	#logo{
-		width: 90%;
-		margin-top: 3%;
-		margin-left: 5%;
-	}
-
-    label {
-        cursor: pointer;
-		color: black;
-		font-size: 40px;
-		margin: 25%;
-    }
-    .menu {
-        text-align: center;
-        width: 100%;
-        display: none;
-    }
-    .menu a {
-        display: block;
-        border-bottom: 1px solid #EAEAEB;
-
-    }
-
-    #toggle:checked + .menu {
-        display: block;
-    }
-
+@media (max-width: 767px) {
+  .burgermenu {
+    display: flex;
   }
 
-/* Ipad fra 768px */
-@media (min-width: 768px){
+  #toggle {
+    display: none;
+  }
+
+  #logo {
+		display: block;
+    width: 50%;
+		border-radius: 8px;
+margin-right: auto;
+margin-left: auto;
+  }
+
+  label {
+    cursor: pointer;
+    color: black;
+    font-size: 40px;
+    margin: 25%;
+  }
+
+  .menu {
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .menu a {
+    display: block;
+    border-bottom: 1px solid #EAEAEB;
+  }
+
+  #toggle:checked+.menu {
+    display: block;
+  }
 }
+
+/* Musik - Youtube - Spotify */
+.youtube {
+display: block;
+width: "90%";
+margin-left: auto;
+margin-right: auto;
+}
+
+/* Ipad fra 768px */
+@media (min-width: 768px) {
+
+  /* Musik - Youtube - Spotify */
+  .youtube {
+		width: "80%";
+		margin-left: 10%;
+		margin-right: 10%;
+
+	}
+}
+
 /* Fra 1024 px - Desktop */
-@media (min-width: 1024px){
+@media (min-width: 1024px) {
+
+  /* Musik - Youtube - Spotify */
 
 }
