--- a/zarp/css/style.css
+++ b/zarp/css/style.css
@@ -7,18 +7,19 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  background-color: #F5ECCE;
+  background-color: #f5f3ef;
 }
 
 html {
-  font-family: "helvetica neue", sans-serif;
+  font-family: "Sitka";
 }
 
 header {
-  background-color: #F5DA81;
+  background-color: #f5f3ef;
 }
 
 h1, h2, h3 {
+  font-family: "Sitka";
   text-align: center;
 }
 
@@ -28,9 +29,10 @@ h1, h2, h3 {
 
 .menu a {
   text-decoration: none;
-  color: white;
+  color: blue;
   line-height: 40px;
-  font-size: 20px;
+  font-size: 17px;
+  text-decoration: underline;
 }
 
 footer {
@@ -41,18 +43,23 @@ footer {
 @media (max-width: 767px) {
   .burgermenu {
     display: flex;
+    border-bottom: 1px solid #EAEAEB;
   }
 
   #toggle {
     display: none;
   }
 
-  #logo {
-		display: block;
-    width: 50%;
-		border-radius: 8px;
+  .boxb {
+    float: none;
+font-size: 20px;
 margin-right: auto;
 margin-left: auto;
+margin-top: 14px;
+  }
+
+  .logo {
+    margin-right: 10%;
   }
 
   label {
@@ -61,7 +68,10 @@ margin-left: auto;
     font-size: 40px;
     margin: 25%;
   }
-
+  .boxc {
+    color: #f5f3ef;
+    cursor: not-allowed;
+  }
   .menu {
     text-align: center;
     width: 100%;
@@ -81,20 +91,54 @@ margin-left: auto;
 /* Musik - Youtube - Spotify */
 .youtube {
 display: block;
-width: "90%";
-margin-left: auto;
-margin-right: auto;
 }
+
+.video iframe {
+margin-left: 12.5%;
+}
+
+
 
 /* Ipad fra 768px */
 @media (min-width: 768px) {
 
+.boxb {
+  margin-left: 30px;
+  margin-top: 40px;
+  font-size: 22px;
+}
+
+.menu {
+  margin-top: 36px;
+}
+.menu a {
+  display: block;
+ margin-left: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
   /* Musik - Youtube - Spotify */
   .youtube {
-		width: "80%";
+		width: "33%";
 		margin-left: 10%;
 		margin-right: 10%;
 
+	}
+  label{
+		display: none;
+	}
+
+	#toggle{
+		display: none;
 	}
 }
 
@@ -102,5 +146,11 @@ margin-right: auto;
 @media (min-width: 1024px) {
 
   /* Musik - Youtube - Spotify */
+  label{
+    display: none;
+  }
 
+  #toggle{
+    display: none;
+  }
 }
