--- a/zarp2/css/style.css
+++ b/zarp2/css/style.css
@@ -102,18 +102,40 @@ margin-left: 12.5%;
 /* Ipad fra 768px */
 @media (min-width: 768px) {
 
+  body {
+    display: grid;
+    width: 100%;
+    height: 200px;
+    grid-template: [header-left] "head head" 5% [header-right]
+                   [main-left]   "nav  main" 200px  [main-right]
+                   [footer-left] "nav  foot" 30px [footer-right]
+                   / 220px 1fr;
+  }
+
+  header {
+    grid-area: head;
+  }
+
+  nav {
+    grid-area: nav;
+  }
+
+  main {
+    grid-area: main;
+  }
+
 .boxb {
-  margin-left: 30px;
-  margin-top: 40px;
+  margin-left: 4%;
+  margin-top: 5%;
   font-size: 22px;
 }
 
 .menu {
-  margin-top: 36px;
+  margin-top: 4.8%;
 }
 .menu a {
   display: block;
- margin-left: 30px;
+ margin-left: 4%;
 }
 
 
@@ -152,5 +174,23 @@ margin-left: 12.5%;
 
   #toggle{
     display: none;
+  }
+  .video iframe {
+    height: 15%;
+    width: "33%";
+  }
+  .youtube {
+    position: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-left: 30%;
+		margin-right: 30%;
+	}
+  .spotify {
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    text-align: center;
   }
 }
