--- a/zarp2/css/style.css
+++ b/zarp2/css/style.css
@@ -42,6 +42,7 @@ footer {
 /* Mobile First op til 767px */
 @media (max-width: 767px) {
   .burgermenu {
+    width: 100%;
     display: flex;
     border-bottom: 1px solid #EAEAEB;
   }
@@ -58,8 +59,10 @@ margin-left: auto;
 margin-top: 14px;
   }
 
+
+
   .logo {
-    margin-right: 10%;
+    margin-left: 3%;
   }
 
   label {
@@ -69,8 +72,10 @@ margin-top: 14px;
     margin: 25%;
   }
   .boxc {
+    display: float;
     color: #f5f3ef;
     cursor: not-allowed;
+    width: 45px;
   }
   .menu {
     text-align: center;
@@ -116,7 +121,7 @@ margin-left: 12.5%;
     grid-area: head;
   }
 
-  nav {
+  .boxa + .menu {
     grid-area: nav;
   }
 
@@ -128,6 +133,13 @@ margin-left: 12.5%;
   margin-left: 4%;
   margin-top: 5%;
   font-size: 22px;
+}
+.boxc  {
+  top: 0;
+  width: 10%;
+  position: fixed;
+  right: 10px;
+  text-align: center;
 }
 
 .menu {
