--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -114,6 +114,9 @@ body {
 .zarpaulo_scroll {
 font-family: "arial black";
 font-weight: bold;
+position: fixed;
+bottom: 0;
+background-color: #f5f3ef;
 }
 
 /* Index-flexbox */
