--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -112,7 +112,7 @@ body {
 /* footer */
 
 .zarpaulo_scroll {
-font-family: "arial black";
+font-family: "arial";
 font-weight: bold;
 position: fixed;
 bottom: 0;
