--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -190,6 +190,9 @@ body {
     line-height: 60px;
   }
   .billedgalleri {
-
+    width: 40%;
+    height: 30%;
+    margin-bottom: 8%;
+    margin-top: 8%;
   }
 }
