--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -111,12 +111,28 @@ body {
 
 /* footer */
 
-.zarpaulo_scroll {
-font-family: "arial";
-font-weight: bold;
-position: fixed;
-bottom: 0;
-/*background-color: #f5f3ef; */
+.container_footer {
+  font-family: "arial";
+  font-weight: bold;
+  position: fixed;
+  bottom: 0;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.scrolling {
+  animation: marquee 1s linear infinite;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }
 
 /* Index-flexbox */
@@ -186,7 +202,7 @@ body {
 /* Fra 1920 px - Desktop */
 @media (min-width: 1920px) {
   .menu a {
-    font-size: 23px;
+    font-size: 21px;
     line-height: 60px;
   }
   .boxb {
@@ -199,11 +215,10 @@ body {
     margin-top: 7.5%;
   }
   .boxc  {
-    width: 7%;
+    width: 9%;
     right: 20px;
   }
   .zarpaulo_scroll {
   font-family: "arial";
-  font-size: 23px;
   }
 }
