--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -70,7 +70,7 @@ body {
     display: grid;
     width: 1024px;
     height: 200px;
-    grid-template: [header-left] "head head" 5% [header-right]
+    grid-template: [header-left] "head head" 0% [header-right]
                    [main-left]   "nav  main" 1fr  [main-right]
                    [footer-left] "foot  foot" 20px [footer-right]
                    / 86px 1fr;
@@ -80,7 +80,7 @@ body {
     grid-area: head;
   }
 
-  .boxa + .menu {
+  .menu {
     grid-area: nav;
   }
 
