--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -31,7 +31,7 @@ h1, h2, h3 {
 
 .menu a {
   display: block;
-  width: 50px;
+  width: 80px;
   height: 17px;
   margin-left: 4%;
   margin-top: 24px;
@@ -80,7 +80,7 @@ body {
     grid-area: head;
   }
 
-  .menu {
+  .boxb + .menu {
     grid-area: nav;
   }
 
@@ -207,7 +207,7 @@ body {
 @media (min-width: 1920px) {
   .menu a {
     font-size: 21px;
-    width: 60px;
+    width: 100px;
     height: 21px;
     margin-top: 35px;
   }
