--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -80,7 +80,7 @@ body {
     grid-area: head;
   }
 
-  .boxb + .menu {
+  .menu {
     grid-area: nav;
   }
 
@@ -93,6 +93,7 @@ body {
   }
 
 .boxb {
+  z-index: 1;
   margin-left: 4%;
   margin-top: 5%;
   font-size: 22px;
