--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -170,6 +170,11 @@ flex-direction: column;
   text-align: center;
 }
 
+@media only screen and (max-width: 600px) {
+  .container_footer {
+    position: absolute;
+  }
+}
 
 /* Fra 1024 px - Desktop */
 @media (min-width: 1024px) {
