--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -170,7 +170,7 @@ flex-direction: column;
   text-align: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .container_footer {
     position: absolute;
   }
