--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -34,21 +34,17 @@ h1, h2, h3 {
 
 .menu {
   margin: 0 30px 0 0;
-  margin-top: 4.8%;
 }
 
 .menu a {
-  display: block;
-  width: 80px;
-  height: 17px;
-  margin-left: 4%;
-  margin-top: 24px;
   text-decoration: none;
   color: blue;
-  line-height: 42px;
+  line-height: 40px;
   font-size: 17px;
   text-decoration: underline;
 }
+
+
 
 .skrivestreg {
   color: white;
@@ -77,10 +73,159 @@ h1, h2, h3 {
   100% {opacity: 100;}
 }
 
+
+
+@media (max-width: 767px) {
+  .burgermenu {
+    width: 100%;
+    display: flex;
+    border-bottom: 1px solid #EAEAEB;
+  }
+
+  #toggle {
+    display: none;
+  }
+
+  .boxb {
+    float: none;
+font-size: 20px;
+margin-right: auto;
+margin-left: auto;
+margin-top: 14px;
+  }
+
+
+
+  .logo {
+    margin-left: 3%;
+  }
+
+  label {
+    cursor: pointer;
+    color: black;
+    font-size: 40px;
+    margin: 25%;
+  }
+  .boxc {
+    display: float;
+    color: #f5f3ef;
+    cursor: not-allowed;
+    width: 45px;
+  }
+  .menu {
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .menu a {
+    display: block;
+    border-bottom: 1px solid #EAEAEB;
+  }
+
+  #toggle:checked+.menu {
+    display: block;
+  }
+
+  /* Index-flexbox */
+
+  .billede-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  }
+
+  .billedgalleri {
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
+            width: 100%;
+            height: 54%;
+            margin-bottom: 0%;
+            margin-top: 0%;
+            border-radius: 3px;
+  }
+
+  /* Musik */
+  .spotify {
+    text-align: center;
+    margin-top: 80px;
+  }
+
+  /*
+  .afspiller {
+    text-align: center;
+  }
+  */
+
+  /* Lyrik */
+
+  .lyrikmenu {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .lyrikmenu > img {
+    width: 40%;
+    height: 70.7%;
+    margin: 10px;
+  }
+
+  .scan1, .scan3, .scan4 {
+    transform: rotate(180deg);
+  }
+
+
+
+  /* footer */
+  .container_footer {
+    font-family: "arial";
+    font-weight: bold;
+    position: fixed;
+    bottom: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    background-color: #f5f3ef;
+  }
+
+  .scrolling {
+    -webkit-animation: marquee 1s linear infinite;
+            animation: marquee 1s linear infinite;
+    display: inline-block;
+    padding-right: 5px;
+  }
+
+  @-webkit-keyframes marquee {
+    from {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+    }
+    to {
+      -webkit-transform: translateX(-100%);
+              transform: translateX(-100%);
+    }
+  }
+}
+
+@media (min-width: 767px) {
 body {
     display: -ms-grid;
     display: grid;
-    width: 1024px;
+    width: 767px;
     height: 200px;
     -ms-grid-rows: 0% 1fr 20px;
     -ms-grid-columns: 15% 1fr;
@@ -98,9 +243,18 @@ body {
   }
 
   .menu {
+      margin-top: 4.8%;
     -ms-grid-row: 2;
     -ms-grid-column: 1;
     grid-area: nav;
+  }
+
+  .menu a {
+    display: block;
+    width: 80px;
+    height: 17px;
+    margin-left: 4%;
+    margin-top: 24px;
   }
 
   main {
@@ -126,9 +280,9 @@ body {
 
 .boxc  {
   top: 0;
-  width: 150px;
+  width: 15%;
   position: absolute;
-  margin-left: 874px;
+  margin-left: 85%;
   text-align: center;
 }
 
@@ -150,6 +304,7 @@ body {
   bottom: 0;
   overflow: hidden;
   white-space: nowrap;
+  background-color: #f5f3ef;
 }
 
 .scrolling {
@@ -218,14 +373,37 @@ display: flex;
 
 
 
-/* Lydafspilleren */
+/* Musik */
+.spotify {
+  text-align: center;
+  margin-top: 120px;
+}
 
+/*
 .afspiller {
   text-align: center;
 }
+*/
 
-/* Fra 1024 px - Desktop */
-@media (min-width: 1024px) {
+/* Lyrik */
+
+.lyrikmenu {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+
+.lyrikmenu > img {
+  width: 40%;
+  height: 70.7%;
+  margin: 10px;
+}
+
+.scan1, .scan3, .scan4 {
+  transform: rotate(180deg);
+}
+
 
 .boxc  {
   position: fixed;
