--- a/zarp4/css/style.css
+++ b/zarp4/css/style.css
@@ -86,6 +86,12 @@ h1, h2, h3 {
 
 }
 
+.koncertliste {
+  text-align: center;
+  margin-top: 50px;
+
+}
+
 
 @media (max-width: 767px) {
   .burgermenu {
